<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uiClient.auth.WelcomeFragment">

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/yanone_kaffeesatz"
            android:text="@string/coffee"
            android:textSize="60sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yanone_kaffeesatz"
                android:gravity="end"
                android:letterSpacing="0.1"
                android:text="@string/neo"
                android:textSize="55sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yanone_kaffeesatz"
                android:letterSpacing="0.1"
                android:text="@string/cafe"
                android:textColor="@color/base"
                android:textSize="55sp" />
        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/base"
        android:text="@string/sign_in"
        android:textSize="18sp"
        app:cornerRadius="@dimen/all_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/gray"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="@dimen/all_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNext" />

</androidx.constraintlayout.widget.ConstraintLayout>